--- a/index.html
+++ b/index.html
@@ -760,10 +760,10 @@
 									Theme
 								</td>
 								<td class="single-label def">
-									Random
+									Bright
 								</td>
 								<td class="single-label def semi">
-									Tells the script to randomly choose colors.
+									Tells the script to use the "bright" colorscheme.
 								</td>
 							</tr>
 							<tr>
@@ -821,10 +821,10 @@
 		</div>
 
 		<!--<script src="js/bootstrap.min.js"></script>-->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<!--<script src="js/jquery172.js"></script>-->
+		<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
+		<script src="js/jquery172.js"></script>
 		<script src="js/page.js"></script>
-		<script src="js/statiSquare.min.js"></script>
+		<script src="js/statiSquare.js"></script>
 		<script src="js/usage.js"></script>
 	</body>
 	
