fixed links to download

--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 						Download it!
 					</h2>
 					<p class="text">
-						If you're interested in this project feel free to download the <a href="http://www.zhereicome.com/experiments/statics/statisquares/compressed/developement.rar" class="btn btn-large btn-green">uncompressed version</a> or the <a href="http://www.zhereicome.com/experiments/statics/statisquares/compressed/minified.rar" class="btn btn-large btn-green">minified version</a>
+						If you're interested in this project feel free to download the <a href="http://www.zhereicome.com/experiments/statics/statisquares/compressed/developement.zip" class="btn btn-large btn-green">uncompressed version</a> or the <a href="http://www.zhereicome.com/experiments/statics/statisquares/compressed/minified.zip" class="btn btn-large btn-green">minified version</a>
 					</p>
 				</div>
 				<div class="image-box">
