--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								Interested?
 							</h2>
 							<h3 class="subtitle">
-								get it from <a href="http://www.zhereicome.com/experiments/statics/statisquares/compressed/minified.rar" class="btn btn-green">here</a>
+								get it from <a href="http://www.zhereicome.com/experiments/statics/statisquares/compressed/minified.zip" class="btn btn-green">here</a>
 							</h3>
 						</div>
 					</div>
