--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@
 						
 						<div class="example-wrap">
 							<div id="example-1" class="example-graph">
-								<span class="value">15%</span>
-								<span class="value">30%</span>
-								<span class="value">20%</span>
-								<span class="value">15%</span>
-								<span class="value">10%</span>
-								<span class="value">10%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">30%</span>
+								<span class="statiSquare-value">20%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">10%</span>
+								<span class="statiSquare-value">10%</span>
 							</div>
 						</div>
 						<div class="query">
@@ -458,12 +458,12 @@
 						</table>
 						<div class="example-wrap">
 							<div id="example-2" class="example-graph">
-								<span class="value">15%</span>
-								<span class="value">30%</span>
-								<span class="value">20%</span>
-								<span class="value">15%</span>
-								<span class="value">10%</span>
-								<span class="value">10%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">30%</span>
+								<span class="statiSquare-value">20%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">10%</span>
+								<span class="statiSquare-value">10%</span>
 							</div>
 						</div>
 						<div class="query">
@@ -547,12 +547,12 @@
 						</table>
 						<div class="example-wrap">
 							<div id="example-3" class="example-graph">
-								<span class="value">15%</span>
-								<span class="value">30%</span>
-								<span class="value">20%</span>
-								<span class="value">15%</span>
-								<span class="value">10%</span>
-								<span class="value">10%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">30%</span>
+								<span class="statiSquare-value">20%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">10%</span>
+								<span class="statiSquare-value">10%</span>
 							</div>
 						</div>
 						<div class="query">
@@ -636,12 +636,12 @@
 
 						<div class="example-wrap">
 							<div id="example-4" class="example-graph">
-								<span class="value">15%</span>
-								<span class="value">30%</span>
-								<span class="value">20%</span>
-								<span class="value">15%</span>
-								<span class="value">10%</span>
-								<span class="value">10%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">30%</span>
+								<span class="statiSquare-value">20%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">10%</span>
+								<span class="statiSquare-value">10%</span>
 							</div>
 						</div>
 						<div class="query">
@@ -703,12 +703,12 @@
 						</table>
 						<div class="example-wrap">
 							<div id="example-5" class="example-graph">
-								<span class="value">15%</span>
-								<span class="value">30%</span>
-								<span class="value">20%</span>
-								<span class="value">15%</span>
-								<span class="value">10%</span>
-								<span class="value">10%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">30%</span>
+								<span class="statiSquare-value">20%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">10%</span>
+								<span class="statiSquare-value">10%</span>
 							</div>
 						</div>
 						<div class="query">
@@ -780,12 +780,12 @@
 						</table>
 						<div class="example-wrap">
 							<div id="example-6" class="example-graph">
-								<span class="value">15%</span>
-								<span class="value">30%</span>
-								<span class="value">20%</span>
-								<span class="value">15%</span>
-								<span class="value">10%</span>
-								<span class="value">10%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">30%</span>
+								<span class="statiSquare-value">20%</span>
+								<span class="statiSquare-value">15%</span>
+								<span class="statiSquare-value">10%</span>
+								<span class="statiSquare-value">10%</span>
 							</div>
 						</div>
 						<div class="query">
